Fix timer bugs, add sound, set default photo if api request failed, styling

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,8 +1,4 @@
 @import "basic/base.css";
-
-
 @import "components/welcomePage.css";
-@import "components/quizPage.css";
-
-
-
+@import "components/QuizPage.css";
+@import "components/gameOverPage.css"
